--- a/Assets/style.css
+++ b/Assets/style.css
@@ -40,8 +40,9 @@ body {
 }
 
 .banner {
-    width: 3840px;
-    height: 2160px;
+    width: 100%;
+    height: auto;
     background-image: url(Cyberpunk\ Bar.png);
-
+    background-size: cover;
+    background-position: center;
 }
